# LearningOpenGL

./: .gitignore  CMakeLists.txt  README.md
include/: camera.hpp  filesystem.hpp  shader.h  shader.hpp
resources/source/: Untitled.mtl  model.gltf
shaders/: lightShader.fs  lightShader.vs  shader.fs  shader.vs
src/: camera.cpp  main.cpp  mesh.cpp  model.cpp  shader.cpp
